--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -8,22 +8,22 @@
   <a [routerLink]="Link.FLOWS_INBOX"
     ><img src="/assets/app-images/inbox.svg" alt="" /> <span>Courriel</span>
   </a>
-  <a [routerLink]="Link.CHAT_APP"
+  <a *ngIf="user.isAdmin$ | async" [routerLink]="Link.CHAT_APP"
     ><img src="/assets/app-images/chat.svg" alt="" /> <span>Chat</span>
   </a>
-  <a *ngIf="user.hasDashboardAccess$ | async" [routerLink]="Link.DASHBOARD_ROOT"
+  <!-- <a *ngIf="user.hasDashboardAccess$ | async" [routerLink]="Link.DASHBOARD_ROOT"
     ><img src="/assets/app-images/dashboard.svg" alt="" />
     <span>Tableau de Bord</span>
-  </a>
+  </a> -->
 
-  <a *ngIf="user.isAdmin$ | async" [routerLink]="Link.SEARCH_APP"
+  <!-- <a [routerLink]="Link.SEARCH_APP"
     ><img src="/assets/app-images/setting.svg" alt="" />
     <span>Paramettres</span>
-  </a>
-  <a ngif [routerLink]="Link.ADMIN_ROOT"
+  </a> -->
+  <a *ngIf="user.isAdmin$ | async" ngif [routerLink]="Link.ADMIN_ROOT"
     ><img src="/assets/app-images/admin.svg" alt="" /> <span>Admin</span>
   </a>
-  <a [routerLink]="Link.SEARCH_APP"
+  <!-- <a [routerLink]="Link.SEARCH_APP"
     ><img src="/assets/app-images/help.svg" alt="" /> <span>Aide</span>
-  </a>
+  </a> -->
 </div>
