fixed, nul labels on save

--- a/src/app/courriel/flows/edit-flow/edit-flow.component.html
+++ b/src/app/courriel/flows/edit-flow/edit-flow.component.html
@@ -117,7 +117,7 @@
     <file-upload-button></file-upload-button>
 
     <button
-      [disabled]="!editFlowForm.valid && !editFlowForm.touched"
+      [disabled]="!editFlowForm.valid && !editFlowForm.pristine"
       (click)="submit()"
       *ngIf="!loading"
       mat-raised-button
