--- a/src/app/courriel/flows/components/files/files.component.html
+++ b/src/app/courriel/flows/components/files/files.component.html
@@ -1,4 +1,5 @@
 <!-- TODO: merge files in view flow page, differs in [Viewer, Remove Button, Progress bar] -->
-
-<file *ngFor="let file of files" [file]="file"></file>
-<progress-bar></progress-bar>
+<div class="files">
+  <file class="file" *ngFor="let file of files" [file]="file"></file>
+</div>
+<progress-bar id="progress-bar"></progress-bar>
