--- a/src/app/courriel/flows/components/files/files.component.scss
+++ b/src/app/courriel/flows/components/files/files.component.scss
@@ -1,17 +1,21 @@
 @import "~src/_variables";
 
 :host {
-  padding: 1rem;
+  .files {
+    padding: 1rem;
 
-  // this is for the appearnace in saveFile
-  margin-bottom: 1rem;
-  border-radius: 0.5rem;
-  background-color: $grey;
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
+    // this is for the appearnace in saveFile
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+    background-color: $grey;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
 }
 
 :host(.empty) {
-  display: none;
+  .files {
+    display: none;
+  }
 }
