--- a/src/app/search/search-header/search-header.component.html
+++ b/src/app/search/search-header/search-header.component.html
@@ -65,7 +65,7 @@
       </button>
     </div>
   </div>
-  <div id="optionsbar" *ngIf="searchKeys$ | async" fxLayout="row">
+  <!-- <div id="optionsbar" *ngIf="searchKeys$ | async" fxLayout="row">
     <mat-form-field class="options" appearance="fill">
       <mat-label>Résultats </mat-label>
       <mat-select value="Tout">
@@ -81,6 +81,6 @@
       <a mat-button [routerLink]="Link.SEARCH_APP">
         <mat-icon>refresh</mat-icon> Réinitialiser
       </a>
-    </div>
-  </div>
+    </div> 
+  </div>-->
 </header>
