--- a/src/app/courriel/flows/edit-flow/edit-flow.component.html
+++ b/src/app/courriel/flows/edit-flow/edit-flow.component.html
@@ -114,7 +114,7 @@
       </button>
     </div>
   </div>
-  <files formControlName="files"></files>
+  <files></files>
   <div class="columns">
     <file-upload-button></file-upload-button>
 
