--- a/src/app/courriel/flows/form/save-flow/save-flow.component.html
+++ b/src/app/courriel/flows/form/save-flow/save-flow.component.html
@@ -108,7 +108,7 @@
   </div>
   <labels formControlName="labels"></labels>
 
-  <files formControlName="files"></files>
+  <files></files>
   <div class="columns">
     <file-upload-button></file-upload-button>
 
