refactored entityservice and fixed search entity

--- a/src/app/courriel/flows/view-flow-page/view-flow-page.component.html
+++ b/src/app/courriel/flows/view-flow-page/view-flow-page.component.html
@@ -33,6 +33,9 @@
     <h1 class="mat-display-1">
       {{ flow.r.title() }}
     </h1>
+    <p>
+      {{ flow.content }}
+    </p>
   </article>
 
   <div aria-label="File list" class="files">
