fixed labels in search

--- a/src/app/courriel/courriel-root/courriel-root.component.html
+++ b/src/app/courriel/courriel-root/courriel-root.component.html
@@ -50,7 +50,7 @@
   </section>
 
   <section>
-    <a class="nav-link small-height-hidden">
+    <!-- <a class="nav-link small-height-hidden">
       <div>
         <mat-icon>info_outline</mat-icon>
       </div>
@@ -58,7 +58,7 @@
     <a class="nav-link" [routerLink]="Link.CHAT_APP" routerLinkActive="active">
       <div>
         <mat-icon>chat_bubble_outline</mat-icon>
-      </div> </a
+      </div> </a -->
     ><a class="nav-link" [routerLink]="Link.USER" routerLinkActive="active">
       <div>
         <mat-icon>account_circle_outline</mat-icon>
