fixed pdf scroll in view flow page

--- a/src/app/courriel/flows/view-flow-page/view-flow-page.component.scss
+++ b/src/app/courriel/flows/view-flow-page/view-flow-page.component.scss
@@ -54,3 +54,16 @@
     }
   }
 }
+
+// pdf
+
+::ng-deep {
+  .ng2-pdf-viewer-container {
+    height: auto !important;
+    width: 100% !important;
+    // position: relative !important;
+    .page {
+      border: 1px dashed grey;
+    }
+  }
+}
