fixed getting null when sending an already sent flow

--- a/src/app/courriel/flows/form/send-flow/send-flow.component.html
+++ b/src/app/courriel/flows/form/send-flow/send-flow.component.html
@@ -6,7 +6,7 @@
 >
   <div class="header">
     <h1>Envoyer</h1>
-    <h3>{{ (parentFlow$ | async)?.title }}</h3>
+    <h3>{{ (parentFlow$ | async)?.r?.title() }}</h3>
     <!-- <p>
       Veuillez saisir toutes les informations sur le courrier dans le formulaire
       ci-dessous
