--- a/src/app/courriel/flows/form/send-flow/send-flow.component.html
+++ b/src/app/courriel/flows/form/send-flow/send-flow.component.html
@@ -5,7 +5,7 @@
   class="box"
 >
   <div class="header">
-    <h1>Envoyer</h1>
+    <h1><back></back> Envoyer</h1>
     <h3>{{ (parentFlow$ | async)?.r?.title() }}</h3>
     <!-- <p>
       Veuillez saisir toutes les informations sur le courrier dans le formulaire
