--- a/src/app/courriel/flows/view-flow-page/view-flow-page.component.html
+++ b/src/app/courriel/flows/view-flow-page/view-flow-page.component.html
@@ -5,11 +5,11 @@
     </span>
 
     <span class="end" *ngIf="app_page">
-      <button mat-icon-button><mat-icon>send</mat-icon></button>
+      <!-- <button mat-icon-button><mat-icon>send</mat-icon></button>
       <button mat-icon-button><mat-icon>info_outline</mat-icon></button>
       <button mat-icon-button><mat-icon>alt_route</mat-icon></button>
       <button mat-icon-button><mat-icon>person_add</mat-icon></button>
-      <button mat-icon-button><mat-icon>reply</mat-icon></button>
+      <button mat-icon-button><mat-icon>reply</mat-icon></button> -->
       <button
         mat-icon-button
         [routerLink]="Link.FLOW_EDIT"
