--- a/src/styles/box.scss
+++ b/src/styles/box.scss
@@ -18,5 +18,13 @@
       flex-wrap: wrap;
       gap: 1rem;
     }
+
+    .header {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 1em 0 1em 0;
+    }
   }
 }
