search formcontrol implementation

--- a/src/app/courriel/courriel-root/courriel-root.component.html
+++ b/src/app/courriel/courriel-root/courriel-root.component.html
@@ -5,6 +5,15 @@
         <mat-icon>apps</mat-icon>
       </div>
     </a>
+    <a
+      class="nav-link"
+      [routerLink]="Link.SEARCH_APP"
+      routerLinkActive="active"
+    >
+      <div title="Rechercher" matTooltipPosition="right">
+        <mat-icon>search</mat-icon>
+      </div>
+    </a>
 
     <!-- inbox -->
     <a
