--- a/src/app/courriel/flows/inbox.component.html
+++ b/src/app/courriel/flows/inbox.component.html
@@ -3,10 +3,15 @@
     <mat-icon> description </mat-icon>
     Enregistrer
   </button>
-  <a mat-button color="primary" [routerLink]="Link.SEARCH_APP">
-    <mat-icon> search </mat-icon>
-    Rechercher
-  </a>
+  <mat-form-field
+    appearance="outline"
+    id="search-form-field"
+    [routerLink]="Link.FLOWS_INBOX"
+    [queryParams]="{ tab: 'SEARCH' }"
+  >
+    <mat-label>Rechercher</mat-label>
+    <input matInput [formControl]="searchCtrl" />
+  </mat-form-field>
 </section>
 
 <nav mat-tab-nav-bar>
