--- a/src/app/courriel/flows/assign-flow/assign-flow.component.html
+++ b/src/app/courriel/flows/assign-flow/assign-flow.component.html
@@ -32,7 +32,7 @@
     <textarea formControlName="note" matInput></textarea>
   </mat-form-field>
   <labels formControlName="labels"></labels>
-  <files formControlName="files"></files>
+  <files></files>
   <div class="columns">
     <file-upload-button></file-upload-button>
     <button mat-raised-button color="primary" cdkFocusInitial>Envoyer</button>
