moved search link down in inbox

--- a/src/app/courriel/courriel-root/courriel-root.component.html
+++ b/src/app/courriel/courriel-root/courriel-root.component.html
@@ -5,15 +5,6 @@
         <mat-icon>apps</mat-icon>
       </div>
     </a>
-    <a
-      class="nav-link"
-      [routerLink]="Link.SEARCH_APP"
-      routerLinkActive="active"
-    >
-      <div title="Rechercher" matTooltipPosition="right">
-        <mat-icon>search</mat-icon>
-      </div>
-    </a>
 
     <!-- inbox -->
     <a
@@ -46,6 +37,15 @@
       </div>
     </a>
 
+    <a
+      class="nav-link"
+      [routerLink]="Link.SEARCH_APP"
+      routerLinkActive="active"
+    >
+      <div title="Rechercher" matTooltipPosition="right">
+        <mat-icon>search</mat-icon>
+      </div>
+    </a>
     <!-- dashboard? -->
     <!-- <a
       class="nav-link"
@@ -68,7 +68,7 @@
       <div>
         <mat-icon>chat_bubble_outline</mat-icon>
       </div> </a -->
-    ><a class="nav-link" [routerLink]="Link.USER" routerLinkActive="active">
+    <a class="nav-link" [routerLink]="Link.USER" routerLinkActive="active">
       <div>
         <mat-icon>account_circle_outline</mat-icon>
       </div>
