added google doc guide file

--- a/src/app/guides/main-guide/main-guide.component.html
+++ b/src/app/guides/main-guide/main-guide.component.html
@@ -1,1 +1,5 @@
-<p>main-guide works!</p>
+<ngx-doc-viewer
+  url="https://docs.google.com/document/d/1by003D0_QYVxWjGstdkh8oKx6GYfyWkW1Tox3rxGbp4/edit?usp=sharing"
+  viewer="google"
+  style="width: 100%; height: auto"
+></ngx-doc-viewer>
