added feedback routing and form

--- a/src/app/guides/main-guide/main-guide.component.html
+++ b/src/app/guides/main-guide/main-guide.component.html
@@ -1,5 +1,4 @@
-<ngx-doc-viewer
-  url="https://docs.google.com/document/d/1by003D0_QYVxWjGstdkh8oKx6GYfyWkW1Tox3rxGbp4/edit?usp=sharing"
-  viewer="google"
-  style="width: 100%; height: auto"
-></ngx-doc-viewer>
+<iframe
+  style="width: 100vw; height: 100vh"
+  src="https://docs.google.com/document/d/e/2PACX-1vTU9PI9bYvJrPlVZSoE1-gHNho9aiyZpSfJhV0StZ2AegW2r-OVgl7k78Q32f_U-DKobTi2Lx45CsSq/pub?embedded=true"
+></iframe>
