--- a/src/app/courriel/feedback/feedback.component.html
+++ b/src/app/courriel/feedback/feedback.component.html
@@ -1,1 +1,4 @@
-https://form.jotform.com/210894654074057
+<script
+  type="text/javascript"
+  src="https://form.jotform.com/jsform/212221829944053"
+></script>
