added set width and back buttons to guide and feedback page

--- a/src/app/courriel/feedback/feedback.component.html
+++ b/src/app/courriel/feedback/feedback.component.html
@@ -1,334 +1,7 @@
-<script
-  src="https://cdn01.jotfor.ms/static/prototype.forms.js"
-  type="text/javascript"
-></script>
-<script
-  src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.27034"
-  type="text/javascript"
-></script>
-<script type="text/javascript">
-  JotForm.newDefaultTheme = true;
-  JotForm.extendsNewTheme = false;
-  JotForm.newPaymentUIForNewCreatedForms = true;
-  JotForm.newPaymentUI = true;
-  JotForm.clearFieldOnHide = "disable";
-  JotForm.submitError = "jumpToFirstError";
-
-  JotForm.init(function () {
-    /*INIT-START*/
-    setTimeout(function () {
-      $("input_4").hint("ex: 23");
-    }, 20);
-    if (window.JotForm && JotForm.accessible)
-      $("input_5").setAttribute("tabindex", 0);
-    JotForm.setCustomHint("input_5", "Type here...");
-    JotForm.alterTexts(undefined);
-    /*INIT-END*/
-  });
-
-  JotForm.prepareCalculationsOnTheFly([
-    null,
-    { name: "feedback", qid: "1", text: "Feedback", type: "control_head" },
-    { name: "submit2", qid: "2", text: "Submit", type: "control_button" },
-    {
-      description: "",
-      name: "name",
-      qid: "3",
-      text: "Name",
-      type: "control_fullname",
-    },
-    {
-      description: "",
-      name: "number",
-      qid: "4",
-      subLabel: "",
-      text: "Number",
-      type: "control_number",
-    },
-    {
-      description: "",
-      name: "typeA",
-      qid: "5",
-      subLabel: "",
-      text: "Type a question",
-      type: "control_textarea",
-    },
-  ]);
-  setTimeout(function () {
-    JotForm.paymentExtrasOnTheFly([
-      null,
-      { name: "feedback", qid: "1", text: "Feedback", type: "control_head" },
-      { name: "submit2", qid: "2", text: "Submit", type: "control_button" },
-      {
-        description: "",
-        name: "name",
-        qid: "3",
-        text: "Name",
-        type: "control_fullname",
-      },
-      {
-        description: "",
-        name: "number",
-        qid: "4",
-        subLabel: "",
-        text: "Number",
-        type: "control_number",
-      },
-      {
-        description: "",
-        name: "typeA",
-        qid: "5",
-        subLabel: "",
-        text: "Type a question",
-        type: "control_textarea",
-      },
-    ]);
-  }, 20);
-</script>
-<style type="text/css">
-  @media print {
-    .form-section {
-      display: inline !important;
-    }
-    .form-pagebreak {
-      display: none !important;
-    }
-    .form-section-closed {
-      height: auto !important;
-    }
-    .page-section {
-      position: initial !important;
-    }
-  }
-</style>
-<link
-  type="text/css"
-  rel="stylesheet"
-  href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?themeRevisionID=5f7ed99c2c2c7240ba580251"
-/>
-<link
-  type="text/css"
-  rel="stylesheet"
-  href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.27034"
-/>
-<link
-  type="text/css"
-  rel="stylesheet"
-  href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.27034"
-/>
-<form
-  class="jotform-form"
-  action="https://submit.jotform.com/submit/212221829944053/"
-  method="post"
-  name="form_212221829944053"
-  id="212221829944053"
-  accept-charset="utf-8"
-  autocomplete="on"
->
-  <input type="hidden" name="formID" value="212221829944053" />
-  <input type="hidden" id="JWTContainer" value="" />
-  <input type="hidden" id="cardinalOrderNumber" value="" />
-  <div role="main" class="form-all">
-    <style>
-      .form-all:before {
-        background: none;
-      }
-    </style>
-    <ul class="form-section page-section">
-      <li id="cid_1" class="form-input-wide" data-type="control_head">
-        <div class="form-header-group header-large">
-          <div class="header-text httal htvam">
-            <h1 id="header_1" class="form-header" data-component="header">
-              Feedback
-            </h1>
-          </div>
-        </div>
-      </li>
-      <li class="form-line" data-type="control_fullname" id="id_3">
-        <label
-          class="form-label form-label-top form-label-auto"
-          id="label_3"
-          for="first_3"
-        >
-          Name
-        </label>
-        <div id="cid_3" class="form-input-wide" data-layout="full">
-          <div data-wrapper-react="true">
-            <span
-              class="form-sub-label-container"
-              style="vertical-align: top"
-              data-input-type="first"
-            >
-              <input
-                type="text"
-                id="first_3"
-                name="q3_name[first]"
-                class="form-textbox"
-                size="10"
-                value=""
-                data-component="first"
-                aria-labelledby="label_3 sublabel_3_first"
-              />
-              <label
-                class="form-sub-label"
-                for="first_3"
-                id="sublabel_3_first"
-                style="min-height: 13px"
-                aria-hidden="false"
-              >
-                First Name
-              </label>
-            </span>
-            <span
-              class="form-sub-label-container"
-              style="vertical-align: top"
-              data-input-type="last"
-            >
-              <input
-                type="text"
-                id="last_3"
-                name="q3_name[last]"
-                class="form-textbox"
-                size="15"
-                value=""
-                data-component="last"
-                aria-labelledby="label_3 sublabel_3_last"
-              />
-              <label
-                class="form-sub-label"
-                for="last_3"
-                id="sublabel_3_last"
-                style="min-height: 13px"
-                aria-hidden="false"
-              >
-                Last Name
-              </label>
-            </span>
-          </div>
-        </div>
-      </li>
-      <li class="form-line" data-type="control_number" id="id_4">
-        <label
-          class="form-label form-label-top form-label-auto"
-          id="label_4"
-          for="input_4"
-        >
-          Number
-        </label>
-        <div id="cid_4" class="form-input-wide" data-layout="half">
-          <input
-            type="number"
-            id="input_4"
-            name="q4_number"
-            data-type="input-number"
-            class="form-number-input form-textbox"
-            style="width: 310px"
-            size="310"
-            value=""
-            placeholder="ex: 23"
-            data-component="number"
-            aria-labelledby="label_4"
-            step="any"
-          />
-        </div>
-      </li>
-      <li class="form-line" data-type="control_textarea" id="id_5">
-        <label
-          class="form-label form-label-top form-label-auto"
-          id="label_5"
-          for="input_5"
-        >
-          Type a question
-        </label>
-        <div id="cid_5" class="form-input-wide" data-layout="full">
-          <textarea
-            id="input_5"
-            class="form-textarea"
-            name="q5_typeA"
-            style="width: 648px; height: 163px"
-            data-component="textarea"
-            aria-labelledby="label_5"
-          ></textarea>
-        </div>
-      </li>
-      <li class="form-line" data-type="control_button" id="id_2">
-        <div id="cid_2" class="form-input-wide" data-layout="full">
-          <div
-            data-align="auto"
-            class="
-              form-buttons-wrapper form-buttons-auto
-              jsTest-button-wrapperField
-            "
-          >
-            <button
-              id="input_2"
-              type="submit"
-              class="
-                form-submit-button
-                submit-button
-                jf-form-buttons
-                jsTest-submitField
-              "
-              data-component="button"
-              data-content=""
-            >
-              Submit
-            </button>
-          </div>
-        </div>
-      </li>
-      <li style="display: none">
-        Should be Empty:
-        <input type="text" name="website" value="" />
-      </li>
-    </ul>
-  </div>
-  <script>
-    JotForm.showJotFormPowered = "new_footer";
-  </script>
-  <script>
-    JotForm.poweredByText = "Powered by JotForm";
-  </script>
-  <input
-    type="hidden"
-    class="simple_spc"
-    id="simple_spc"
-    name="simple_spc"
-    value="212221829944053"
-  />
-  <script type="text/javascript">
-    var all_spc = document.querySelectorAll(
-      "form[id='212221829944053'] .si" + "mple" + "_spc"
-    );
-    for (var i = 0; i < all_spc.length; i++) {
-      all_spc[i].value = "212221829944053-212221829944053";
-    }
-  </script>
-  <div class="formFooter-heightMask"></div>
-  <div class="formFooter f6">
-    <div class="formFooter-wrapper formFooter-leftSide">
-      <a
-        href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=212221829944053&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le"
-        target="_blank"
-        class="formFooter-logoLink"
-        ><img
-          class="formFooter-logo"
-          src="https://cdn.jotfor.ms/assets/img/logo/logo-new@1x.png"
-          alt="Jotform Logo"
-      /></a>
-    </div>
-    <div class="formFooter-wrapper formFooter-rightSide">
-      <span class="formFooter-text">
-        Now create your own JotForm - It's free!
-      </span>
-      <a
-        class="formFooter-button"
-        href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=212221829944053&utm_content=jotform_button&utm_campaign=powered_by_jotform_le"
-        target="_blank"
-        >Create your own JotForm</a
-      >
-    </div>
-  </div>
-</form>
-<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.27034"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.27034"></script>
+<back></back>
+<iframe
+  #iframe
+  id="Iframe"
+  style="height: 1300px"
+  src="https://form.jotform.com/212221468820045"
+></iframe>
