--- a/src/app/guides/main-guide/main-guide.component.html
+++ b/src/app/guides/main-guide/main-guide.component.html
@@ -1,4 +1,5 @@
+<back></back>
 <iframe
-  style="width: 100vw; height: 100%"
+  style="width: 100vw; height: 2000px"
   src="https://docs.google.com/document/d/e/2PACX-1vTU9PI9bYvJrPlVZSoE1-gHNho9aiyZpSfJhV0StZ2AegW2r-OVgl7k78Q32f_U-DKobTi2Lx45CsSq/pub?embedded=true"
 ></iframe>
