put link to feedback and guide in landing page fixed feedback width

--- a/src/app/courriel/feedback/feedback.component.html
+++ b/src/app/courriel/feedback/feedback.component.html
@@ -2,6 +2,6 @@
 <iframe
   #iframe
   id="Iframe"
-  style="height: 1300px"
+  style="height: 1300px; width: 100vw"
   src="https://form.jotform.com/212221468820045"
 ></iframe>
