--- a/src/app/home/landing-page/landing.component.html
+++ b/src/app/home/landing-page/landing.component.html
@@ -33,3 +33,17 @@
     <img class="site__img" src="https://image.ibb.co/c7grYb/image3015.png" />
   </div>
 </section>
+<footer
+  style="display: flex; justify-content: center; align-items: center; gap: 1rem"
+>
+  <button mat-button [routerLink]="Link.FEEDBACK">
+    <mat-icon>feedback</mat-icon> Feedback
+  </button>
+  <button mat-button [routerLink]="Link.GUIDE">
+    <mat-icon>help</mat-icon> Guide
+  </button>
+</footer>
+
+<h4 style="text-align: center">
+  Copyright © Direction du Cabinet. Ministère de l'Économie et des Finances
+</h4>
