--- a/src/app/courriel/entities/add-new-entity/add-new-entity.component.html
+++ b/src/app/courriel/entities/add-new-entity/add-new-entity.component.html
@@ -1,7 +1,5 @@
 <div class="container box">
-  <button mat-mini-fab routerLink="/courriel/entities">
-    <mat-icon>arrow_back</mat-icon>
-  </button>
+  <back></back>
   <header>
     <h1>New Entity [{{ parent_entity?.short }} > {{ short.value }}]</h1>
   </header>
