added video guide

--- a/src/app/guides/main-guide/main-guide.component.html
+++ b/src/app/guides/main-guide/main-guide.component.html
@@ -1,5 +1,16 @@
 <back></back>
+<div class="iframe">
+  <iframe
+    style="width: 100vw; height: 60vw"
+    src="https://www.youtube.com/embed/lQ32ugCYixs"
+    frameborder="0"
+    allowfullscreen
+  >
+  </iframe>
+</div>
 <iframe
-  style="width: 100vw; height: 2000px"
+  frameborder="0"
+  allowfullscreen
+  style="width: 100vw; height: 8000px"
   src="https://docs.google.com/document/d/e/2PACX-1vTU9PI9bYvJrPlVZSoE1-gHNho9aiyZpSfJhV0StZ2AegW2r-OVgl7k78Q32f_U-DKobTi2Lx45CsSq/pub?embedded=true"
 ></iframe>
