REMOVED FEEDBACK IFRAME BORDER

--- a/src/app/courriel/feedback/feedback.component.html
+++ b/src/app/courriel/feedback/feedback.component.html
@@ -2,6 +2,8 @@
 <iframe
   #iframe
   id="Iframe"
-  style="height: 1300px; width: 100vw"
+  style="height: 2000px; width: 100%"
+  frameborder="0"
+  allowfullscreen
   src="https://form.jotform.com/212221468820045"
 ></iframe>
