fixed parent entity_id in admin

--- a/src/app/courriel/entities/entity/entity.component.html
+++ b/src/app/courriel/entities/entity/entity.component.html
@@ -11,7 +11,7 @@
   <mat-card-actions>
     <a
       mat-icon-button
-      routerLink="/courriel/entities/add/"
+      routerLink="/admin/entities/add/"
       [queryParams]="{ entity_id: entity.id }"
     >
       <mat-icon>add</mat-icon>
