--- a/src/app/courriel/entities/components/entity-autocomplete/entity-autocomplete.component.scss
+++ b/src/app/courriel/entities/components/entity-autocomplete/entity-autocomplete.component.scss
@@ -1,3 +1,11 @@
+
 mat-form-field {
   display: block;
 }
+// .cdk-overlay-container {
+//   ::ng-deep {
+//     .mat-autocomplete-panel-above {
+//       width: 220px !important;
+//     }
+//   }
+// }
